// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ItemList with empty message 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ItemList
    items={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="list-header"
>
          <div
                    className="show-for-mobile"
          >
                    Items
          </div>
          <div
                    className="show-for-desktop"
          >
                    Item
          </div>
          <div
                    className="show-for-desktop"
          >
                    Net Amount
          </div>
</div>,
        <div
          className="list-body"
>
          <div
                    className="list-item list-item--message"
          >
                    <span>
                              No items
                    </span>
          </div>
</div>,
      ],
      "className": "content-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="show-for-mobile"
>
              Items
</div>,
            <div
              className="show-for-desktop"
>
              Item
</div>,
            <div
              className="show-for-desktop"
>
              Net Amount
</div>,
          ],
          "className": "list-header",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Items",
              "className": "show-for-mobile",
            },
            "ref": null,
            "rendered": "Items",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Item",
              "className": "show-for-desktop",
            },
            "ref": null,
            "rendered": "Item",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Net Amount",
              "className": "show-for-desktop",
            },
            "ref": null,
            "rendered": "Net Amount",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="list-item list-item--message"
>
            <span>
                        No items
            </span>
</div>,
          "className": "list-body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              No items
</span>,
            "className": "list-item list-item--message",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "No items",
            },
            "ref": null,
            "rendered": "No items",
            "type": "span",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="list-header"
>
            <div
                        className="show-for-mobile"
            >
                        Items
            </div>
            <div
                        className="show-for-desktop"
            >
                        Item
            </div>
            <div
                        className="show-for-desktop"
            >
                        Net Amount
            </div>
</div>,
          <div
            className="list-body"
>
            <div
                        className="list-item list-item--message"
            >
                        <span>
                                    No items
                        </span>
            </div>
</div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="show-for-mobile"
>
                Items
</div>,
              <div
                className="show-for-desktop"
>
                Item
</div>,
              <div
                className="show-for-desktop"
>
                Net Amount
</div>,
            ],
            "className": "list-header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Items",
                "className": "show-for-mobile",
              },
              "ref": null,
              "rendered": "Items",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Item",
                "className": "show-for-desktop",
              },
              "ref": null,
              "rendered": "Item",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Net Amount",
                "className": "show-for-desktop",
              },
              "ref": null,
              "rendered": "Net Amount",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="list-item list-item--message"
>
              <span>
                            No items
              </span>
</div>,
            "className": "list-body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span>
                No items
</span>,
              "className": "list-item list-item--message",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "No items",
              },
              "ref": null,
              "rendered": "No items",
              "type": "span",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should render ItemList with items 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ItemList
    items={
        Array [
            Object {
              "cost": 195,
              "createdAt": 0,
              "description": "Gum",
              "id": "1",
              "note": "",
              "quantity": "2",
            },
            Object {
              "cost": 109500,
              "createdAt": -345600000,
              "description": "Rent",
              "id": "2",
              "note": "",
              "quantity": "4",
            },
            Object {
              "cost": 4500,
              "createdAt": 345600000,
              "description": "Credit Card",
              "id": "3",
              "note": "",
              "quantity": "3",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="list-header"
>
          <div
                    className="show-for-mobile"
          >
                    Items
          </div>
          <div
                    className="show-for-desktop"
          >
                    Item
          </div>
          <div
                    className="show-for-desktop"
          >
                    Net Amount
          </div>
</div>,
        <div
          className="list-body"
>
          <InventoryListItem
                    cost={195}
                    createdAt={0}
                    description="Gum"
                    id="1"
                    note=""
                    quantity="2"
          />
          <InventoryListItem
                    cost={109500}
                    createdAt={-345600000}
                    description="Rent"
                    id="2"
                    note=""
                    quantity="4"
          />
          <InventoryListItem
                    cost={4500}
                    createdAt={345600000}
                    description="Credit Card"
                    id="3"
                    note=""
                    quantity="3"
          />
</div>,
      ],
      "className": "content-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="show-for-mobile"
>
              Items
</div>,
            <div
              className="show-for-desktop"
>
              Item
</div>,
            <div
              className="show-for-desktop"
>
              Net Amount
</div>,
          ],
          "className": "list-header",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Items",
              "className": "show-for-mobile",
            },
            "ref": null,
            "rendered": "Items",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Item",
              "className": "show-for-desktop",
            },
            "ref": null,
            "rendered": "Item",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Net Amount",
              "className": "show-for-desktop",
            },
            "ref": null,
            "rendered": "Net Amount",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <InventoryListItem
              cost={195}
              createdAt={0}
              description="Gum"
              id="1"
              note=""
              quantity="2"
/>,
            <InventoryListItem
              cost={109500}
              createdAt={-345600000}
              description="Rent"
              id="2"
              note=""
              quantity="4"
/>,
            <InventoryListItem
              cost={4500}
              createdAt={345600000}
              description="Credit Card"
              id="3"
              note=""
              quantity="3"
/>,
          ],
          "className": "list-body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "cost": 195,
              "createdAt": 0,
              "description": "Gum",
              "id": "1",
              "note": "",
              "quantity": "2",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "function",
            "props": Object {
              "cost": 109500,
              "createdAt": -345600000,
              "description": "Rent",
              "id": "2",
              "note": "",
              "quantity": "4",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "function",
            "props": Object {
              "cost": 4500,
              "createdAt": 345600000,
              "description": "Credit Card",
              "id": "3",
              "note": "",
              "quantity": "3",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="list-header"
>
            <div
                        className="show-for-mobile"
            >
                        Items
            </div>
            <div
                        className="show-for-desktop"
            >
                        Item
            </div>
            <div
                        className="show-for-desktop"
            >
                        Net Amount
            </div>
</div>,
          <div
            className="list-body"
>
            <InventoryListItem
                        cost={195}
                        createdAt={0}
                        description="Gum"
                        id="1"
                        note=""
                        quantity="2"
            />
            <InventoryListItem
                        cost={109500}
                        createdAt={-345600000}
                        description="Rent"
                        id="2"
                        note=""
                        quantity="4"
            />
            <InventoryListItem
                        cost={4500}
                        createdAt={345600000}
                        description="Credit Card"
                        id="3"
                        note=""
                        quantity="3"
            />
</div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="show-for-mobile"
>
                Items
</div>,
              <div
                className="show-for-desktop"
>
                Item
</div>,
              <div
                className="show-for-desktop"
>
                Net Amount
</div>,
            ],
            "className": "list-header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Items",
                "className": "show-for-mobile",
              },
              "ref": null,
              "rendered": "Items",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Item",
                "className": "show-for-desktop",
              },
              "ref": null,
              "rendered": "Item",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Net Amount",
                "className": "show-for-desktop",
              },
              "ref": null,
              "rendered": "Net Amount",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <InventoryListItem
                cost={195}
                createdAt={0}
                description="Gum"
                id="1"
                note=""
                quantity="2"
/>,
              <InventoryListItem
                cost={109500}
                createdAt={-345600000}
                description="Rent"
                id="2"
                note=""
                quantity="4"
/>,
              <InventoryListItem
                cost={4500}
                createdAt={345600000}
                description="Credit Card"
                id="3"
                note=""
                quantity="3"
/>,
            ],
            "className": "list-body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "cost": 195,
                "createdAt": 0,
                "description": "Gum",
                "id": "1",
                "note": "",
                "quantity": "2",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "function",
              "props": Object {
                "cost": 109500,
                "createdAt": -345600000,
                "description": "Rent",
                "id": "2",
                "note": "",
                "quantity": "4",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "function",
              "props": Object {
                "cost": 4500,
                "createdAt": 345600000,
                "description": "Credit Card",
                "id": "3",
                "note": "",
                "quantity": "3",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
